@@ -2,6 +2,7 @@ recent:
 	fixed non-working example in filter_syntax man page
 	fix 64-bit warning in filter.c netmask calculation
 	add "-F [policy]" flush option
+	better feedback on parse errors
 
 0.10:
 	some cleanups, slight memory usage reduction
@@ -83,4 +84,4 @@ recent:
 	iptables driver
 	a few bugs
 
-$Id: HISTORY,v 1.45 2002/11/11 19:48:38 matthew Exp $
+$Id: HISTORY,v 1.46 2002/11/11 20:51:38 matthew Exp $
